src/test/contracts/negative/pattern_match5.jsligo
let test_foo = (x : test_exec_result) : string => {
  match(x, {
    Success: (x : nat, y : nat) => "",
    Fail: (_ : test_exec_error) => ""
  });
}